	Changed: Default database type for the Servers::mta::postfix::postmap() method is now cdb
	Changed: imscp-db-keys file is now a conffile (same format as the imscp.conf conffile)
	Changed: Usage of AES (Rijndael) instead of Blowfish for i-MSCP data encryption
	Fixed: Cleanup paths using File::Spec::canonpath() instead of dedicated regexps
	Fixed: Default phpini data must be lazy loaded (only once per domain module) to save SQL queries
	Fixed: Could not remove service
	Fixed: Domain aliases are not processed correctly in Servers::mta::postfix::addDmn()
	Fixed: phptmp directory is deleted by mistake in some contexts (Fixed by #IP-1396)
	Fixed: Wrong domain type set in module data providers
	Introduced: HSTS (HTTP Strict Transport Security) feature
	Moved: vlogger script into i-MSCP engine tools directory
	Removed: beforeDispatchRequest and afterDispatchRequest events
	Removed: imscp-httpd-logs-mngr script
	Removed: Optional dirname parameter for all iMSCP::Dir::* methods (iMSCP::Dir object = One directory)
	Removed: Support for file/dir exclusion in the iMSCP::Dir::rcopy() method
	Rewritten: iMSCP::Crypt library
	Rewritten: iMSCP::SetRights library (usage of chown and chmod perl-functions instead of system commands)
	Rewritten: Servers::mta::postfix

CONFIGS
	Added: cron package (Debian/Ubuntu)
	Added: mounts.conf file - fstab-like file which holds filesystems that must be mounted in sequential order on reboot
	Added: imscp_mountall sysvinit script an imscp_mountall upstart job - Mount i-MSCP filesystems on server reboot
	Added: libcrypt-rijndael-perl package (Debian/Ubuntu)
	Added: postfix-cdb package (Debian/Ubuntu)
	Changed: Usage of cdb maps instead of hash maps (Postfix)
	Fixed: ftp_ssl.log log file is not rotated (proftpd logrotate conffile)
	Removed: Unless lookup table templates (Postfix)
	Removed: Unused imscp logrotate configuration file
	Removed: Working directory (Postfix)

CONTRIB